Added Project page and AI Soultions PAge

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -129,10 +129,17 @@
                           ><span class="text-span">Branding</span></a
                         >
                       </li>
+                      <li>
+                        <a href="./aisol.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">AI Solutions</span></a
+                        >
+                      </li>
                     </ul>
                   </li>
 
-                  <li><a href="./careers.html" class=".main-a">Career</a></li>
+                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li><a href="./project.html" class=".main-a">Projects</a></li>
                   <li>
                     <a
                       id="About-us"
@@ -288,45 +295,47 @@
       </section>
 
       <section class="services-tab">
-        <div class="auto-container">
-          <div class="features-one">
-            <div class="feature-row">
-              <div id="Web" class="grid-item">
-                <i class="fa-brands fa-chrome"></i>
-                <h6>Website Development</h6>
-              </div>
-              <div id="Digi" class="grid-item">
-                <i class="fa-solid fa-comments-dollar"></i>
-                <h6>Digital Marketing</h6>
-              </div>
-              <div id="Erp" class="grid-item">
-                <i class="fa-solid fa-fingerprint"></i>
-                <h6>ERP Solutions</h6>
-              </div>
-              <div id="Soft" class="grid-item">
-                <i class="fa-solid fa-laptop-code"></i>
-                <h6>Software Development</h6>
-              </div>
-              <div id="Adv" class="grid-item">
-                <i class="fa-solid fa-robot"></i>
-                <h6>Advanced Tech</h6>
-              </div>
-              <div id="Mai" class="grid-item">
-                <i class="fa-solid fa-circle-question"></i>
-                <h6>Maintenance Support</h6>
-              </div>
-              <div id="Advi" class="grid-item">
-                <i class="fa-solid fa-screwdriver-wrench"></i>
-                <h6>Advisory</h6>
-              </div>
-              <div id="AppDev" class="grid-item">
-                <i class="fa-brands fa-app-store"></i>
-                <h6>App Development</h6>
-              </div>
-              <div id="Brand" class="grid-item">
-                <i class="fa-solid fa-code-branch"></i>
-                <h6>Branding</h6>
-              </div>
+        <div class="features-one">
+          <div class="feature-row">
+            <div id="Web" class="grid-item">
+              <i class="fa-brands fa-chrome"></i>
+              <h6>Website Development</h6>
+            </div>
+            <div id="Digi" class="grid-item">
+              <i class="fa-solid fa-comments-dollar"></i>
+              <h6>Digital Marketing</h6>
+            </div>
+            <div id="Erp" class="grid-item">
+              <i class="fa-solid fa-fingerprint"></i>
+              <h6>ERP Solutions</h6>
+            </div>
+            <div id="Soft" class="grid-item">
+              <i class="fa-solid fa-laptop-code"></i>
+              <h6>Software Development</h6>
+            </div>
+            <div id="Adv" class="grid-item">
+              <i class="fa-solid fa-robot"></i>
+              <h6>Advanced Tech</h6>
+            </div>
+            <div id="Mai" class="grid-item">
+              <i class="fa-solid fa-circle-question"></i>
+              <h6>Maintenance Support</h6>
+            </div>
+            <div id="Advi" class="grid-item">
+              <i class="fa-solid fa-screwdriver-wrench"></i>
+              <h6>Advisory</h6>
+            </div>
+            <div id="AppDev" class="grid-item">
+              <i class="fa-brands fa-app-store"></i>
+              <h6>App Development</h6>
+            </div>
+            <div id="Brand" class="grid-item">
+              <i class="fa-solid fa-code-branch"></i>
+              <h6>Branding</h6>
+            </div>
+            <div id="AI" class="grid-item">
+              <i class="fa-solid fa-brain"></i>
+              <h6>AI Solutions</h6>
             </div>
           </div>
         </div>
@@ -447,29 +456,8 @@
                   </div>
                 </div>
                 <div class="team-content">
-                  <h4><a href="#" class="member-name">Nithya Rajendran</a></h4>
-                  <p class="member-position">Software Developer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="../assets/teams/women.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Chinju</a></h4>
-                  <p class="member-position">System Engineer</p>
+                  <h4><a href="#" class="member-name">Rahul Bose C P</a></h4>
+                  <p class="member-position">CFO</p>
                 </div>
               </div>
               <div class="team-col">
@@ -489,8 +477,8 @@
                   </div>
                 </div>
                 <div class="team-content">
-                  <h4><a href="#" class="member-name">Varghese</a></h4>
-                  <p class="member-position">Software Developer</p>
+                  <h4><a href="#" class="member-name">Gokul Krishnan U</a></h4>
+                  <p class="member-position">CEO</p>
                 </div>
               </div>
             </div>
@@ -505,7 +493,8 @@
                 <h4 class="footer-title">Company</h4>
                 <ul class="main-footer-list">
                   <li><a id="home" href="#">Home</a></li>
-                  <li><a href="./careers.html">Career</a></li>
+                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./project.html">Projects</a></li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -540,6 +529,7 @@
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
+                  <li><a href="./aisol.html">AI Solutions</a></li>
                 </ul>
               </div>
             </div>
@@ -637,9 +627,11 @@
             <li><a href="./advisory.html">Advisory</a></li>
             <li><a href="./appdev.html">App Development</a></li>
             <li><a href="./branding.html">Branding</a></li>
+            <li><a href="./aisol.html">AI solutions</a></li>
           </ul>
         </li>
-        <li><a href="./careers.html">Career</a></li>
+        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./project.html">Projects</a></li>
 
         <li>
           <a
@@ -706,6 +698,13 @@
       featuresBrand.addEventListener("click", () => {
         window.location.href = "./branding.html";
       });
+
+      const featuresAI = document.getElementById("AI");
+      
+      featuresAI.addEventListener("click", () => {
+        window.location.href = "./aisol.html";
+      })
+
     </script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
