--- a/pages/contact.html
+++ b/pages/contact.html
@@ -123,10 +123,17 @@
                           ><span class="text-span">Branding</span></a
                         >
                       </li>
+                      <li>
+                        <a href="./aisol.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">AI SOlutions</span></a
+                        >
+                      </li>
                     </ul>
                   </li>
 
-                  <li><a href="./careers.html" class=".main-a">Career</a></li>
+                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li><a href="./project.html" class=".main-a">Projects</a></li>
 
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
@@ -319,7 +326,8 @@
                 <h4 class="footer-title">Company</h4>
                 <ul class="main-footer-list">
                   <li><a id="home" href="#">Home</a></li>
-                  <li><a href="./careers.html">Career</a></li>
+                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./project.html">Projects</a></li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -354,6 +362,7 @@
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
+                  <li><a href="./aisol.html">AI Solutions</a></li>
                 </ul>
               </div>
             </div>
@@ -451,9 +460,11 @@
             <li><a href="./advisory.html">Advisory</a></li>
             <li><a href="./appdev.html">App Development</a></li>
             <li><a href="./branding.html">Branding</a></li>
+            <li><a href="./aisol.html">AI Solutions</a></li>
           </ul>
         </li>
-        <li><a href="./careers.html">Career</a></li>
+        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./project.html">Projects</a></li>
 
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li>
