--- a/pages/aisol.html
+++ b/pages/aisol.html
@@ -42,14 +42,18 @@
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title> SciPy | Branding </title>
+    <title>SciPy | AI Solutions</title>
   </head>
   <body>
     <div class="sidebar-closer"></div>
     <div class="ping"></div>
 
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
     </div>
     <div class="content">
       <!-- header section  -->
@@ -140,7 +144,7 @@
                       </li>
                     </ul>
                   </li>
-                  
+
                   <li><a href="./careers.html" class=".main-a">Careers</a></li>
                   <li><a href="./project.html" class=".main-a">Projects</a></li>
                   <li>
@@ -165,7 +169,14 @@
             </nav>
           </div>
         </header>
-        <div class="about-home" style="background: url('../assets/Service-images/Branding\ -\ 2.jpg'); background-position: bottom bottom;">
+        <div
+          class="about-home"
+          style="
+            background: url('../assets/Service-images/Maintenance\ and\ support\ -\ 1.jpg');
+            background-position: center center;
+            background-size: contain;
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -190,11 +201,26 @@
             </div>
           </div>
           <div class="auto-container">
-            <div class="page-title">
-              <h1 class="title-abt">Branding</h1>
+            <div
+              class="page-title"
+              style="
+                text-align: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              "
+            >
+              <h1 class="title-abt">AI Solutions</h1>
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><p class="page-about">Branding</p></li>
+                <li>
+                  <p
+                    class="page-about"
+                    style="text-align: left; text-wrap: nowrap"
+                  >
+                    AI Solutions
+                  </p>
+                </li>
               </ul>
             </div>
           </div>
@@ -206,28 +232,28 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="../assets/Service-images/Branding - 1.jpg"
+                src="../assets/Service-images/Maintenance and support - 2.jpg"
                 alt=""
               />
               <div class="lower-content">
-                <h3>Branding</h3>
+                <h3>AI Solutions</h3>
                 <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interative web and mobile solution We are effective in
-                  next generation enterprise application on the web,Mobile and
-                  desktop to modernized business process and enhance customes
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the market
+                  Our Application Support offer top quality well organised
+                  adaptive support. We are resposible for the design,
+                  installation, maintenance and requirement of the system and
+                  personal that are at this core of an organisation. We provide
+                  customer support service, for a range of customer to get out
+                  of your product and resolve their problem
                 </p>
                 <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenge in
-                  business. We provide you
-                  secure,intractive,responive,elagant,sleek and fully customized
-                  UI/UX
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Veniam officia fuga saepe. Laudantium quod voluptatibus modi
+                  laborum esse saepe itaque enim perferendis, perspiciatis quasi
+                  corporis ullam, earum, nihil dolore aperiam? Lorem ipsum dolor
+                  sit, amet consectetur adipisicing elit. Ratione fugiat
+                  adipisci iure sapiente blanditiis! Doloremque consequatur
+                  voluptatibus error facere commodi voluptatum! Dolore excepturi
+                  neque doloremque earum voluptas aspernatur, modi fuga?
                 </p>
                 <h6>Our Success JOURNEY We can Provide.</h6>
                 <p>
@@ -237,11 +263,11 @@
                   rutrum lectus vel est pulvinar in scelerisque purus.
                 </p>
                 <div class="lower-content-row">
-                  <div class="lower-content-col" style="width: 370px !important; height: 370px !important;">
+                  <div class="lower-content-col">
                     <img
-                      style="border-radius: 30px;"
+                      style="border-radius: 30px"
                       class="lower-content-img"
-                      src="../assets/Service-images/Branding - 1.jpg"
+                      src="../assets/Service-images/Maintenance and support - 3.jpg"
                       alt=""
                     />
                   </div>
@@ -286,7 +312,6 @@
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
                   <li><a href="./aisol.html">AI Solutions</a></li>
-
                 </ul>
               </div>
               <div class="widget-content">
@@ -367,15 +392,12 @@
                   </li>
                   <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./maintenance.html"
-                      >Maintenance and Support</a
-                    >
+                    <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
                   <li><a href="./aisol.html">AI Solutions</a></li>
-
                 </ul>
               </div>
             </div>
@@ -468,39 +490,31 @@
               >
             </li>
             <li>
-              <a href="./erppage.html" data-page="Service1"
-                >ERP Solutions</a
-              >
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
+            <li><a href="./websitedev.html">Website Development</a></li>
+            <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+            <li><a href="./erppage.html">ERP Solutions</a></li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-            <li><a href="./maintenance.html">Maintenance and Support</a></li>
             <li>
-              <a
-                href="./advisory.html"
-                >Advisory</a
-              >
+              <a href="./maintenance.html">Maintenance and Support</a>
             </li>
+            <li><a href="./advisory.html">Advisory</a></li>
+            <li><a href="./appdev.html">App Development</a></li>
+            <li><a href="./branding.html">Branding</a></li>
             <li>
               <a
-                href="./appdev.html"
-                >App Development</a
-              >
-            </li>
-            <li>
-              <a
+                href="./aisol.html"
                 style="color: #fff; background-color: #0092ff"
-                href="./branding.html" 
-                >Branding</a
+                >AI Solutions</a
               >
             </li>
-            <li><a href="./aisol.html">AI Solutions</a></li>
-
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
         <li><a href="./project.html">Projects</a></li>
-       
+
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
