--- a/pages/careers.html
+++ b/pages/careers.html
@@ -3,21 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/careers.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="../css/projects.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -25,18 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="odometer-theme-car.css" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
@@ -49,7 +25,11 @@
     <div class="ping"></div>
 
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
     </div>
     <div class="content">
       <!-- header section  -->
@@ -129,6 +109,12 @@
                           ><span class="text-span">Branding</span></a
                         >
                       </li>
+                      <li>
+                        <a href="./aisol.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">AI Solutions</span></a
+                        >
+                      </li>
                     </ul>
                   </li>
 
@@ -137,12 +123,12 @@
                       href="#"
                       class="active-link home-color .main-a"
                       style="color: #0092ff"
-                      >Career</a
+                      >Careers</a
                     >
                   </li>
-                  <!-- <li>
-                    <a href="./projects.html">Project</a>
-                  </li> -->
+                  <li>
+                    <a href="./project.html">Projects</a>
+                  </li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -212,37 +198,34 @@
           <!-- <h3 class="sec-title-gallery">
             <i class="fa-brands fa-studiovinari"></i>OUR PLACED
           </h3> -->
-          <h2 class="gallery-title-head">Projects Done</h2>
+          <h2 class="gallery-title-head">Our Career Progress</h2>
           <div class="sec-title-seperator">
             <div class="blue-item"></div>
           </div>
         </div>
-        <div class="auto-container">
-          <div
-            class="d-flex justify-content-center align-items-center flex-column"
-          >
-            <div class="Projects-div">
-              <ul class="App-list pro-col">
-                <h2>Apps</h2>
-                <li>
-                  <a href="#">Plant Disease Detection (Plant-Care App)</a>
-                </li>
-                <li><a href="#">Malayalam Speech Generation App</a></li>
-                <li><a href="#">Image Enchance App</a></li>
-              </ul>
-              <ul class="Web-list pro-col">
-                <h2>Websites</h2>
-                <li>
-                  <a href="#">Medical Image Analysis & Feature Extraction</a>
-                </li>
-                <li><a href="#">Catrait Eye Segmentation</a></li>
-                <li><a href="#">Real Time View Counting (Advertising)</a></li>
-                <li>
-                  <a href="#">Skin ACNE Analysis & Real time Identification</a>
-                </li>
-                <li><a href="#">Stock Data Analysis</a></li>
-                <li><a href="#">Auto Scientific name from Image Search</a></li>
-              </ul>
+        <div class="project-sect">
+          <div class="auto-container">
+            <div class="wrapper">
+              <div class="container">
+                <i class="fa-solid fa-dove"></i>
+                <span class="num" data-val="200">000</span>
+                <span class="text">Projects Done</span>
+              </div>
+              <div class="container">
+                <i class="fa-solid fa-smile"></i>
+                <span class="num" data-val="160">000</span>
+                <span class="text">Happy Clients</span>
+              </div>
+              <div class="container">
+                <i class="fa-solid fa-people-group"></i>
+                <span class="num" data-val="25">000</span>
+                <span class="text">Team Members</span>
+              </div>
+              <div class="container">
+                <i class="fa-solid fa-star"></i>
+                <span class="num" data-val="100">000</span>
+                <span class="text">Five Stars</span>
+              </div>
             </div>
           </div>
         </div>
@@ -336,7 +319,7 @@
                 <div class="team-image-div">
                   <img class="team-img" src="../assets/teams/men.jpg" alt="" />
                   <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
+                    class="hover-social-menu d-flex justify-content-between align-items-baseline mt-3"
                   >
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-instagram"></i>
@@ -492,7 +475,8 @@
                 <h4 class="footer-title">Company</h4>
                 <ul class="main-footer-list">
                   <li><a id="home" href="#">Home</a></li>
-                  <li><a href="./careers.html">Career</a></li>
+                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./project.html">Projects</a></li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -520,13 +504,13 @@
                   </li>
                   <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./maintenance.html"
-                      >Maintenance and Support</a
-                    >
+                    <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
+                  <li><a href="./aisol.html">AI Solutions</a></li>
+
                 </ul>
               </div>
             </div>
@@ -622,6 +606,8 @@
             <li><a href="./advisory.html">Advisory</a></li>
             <li><a href="./appdev.html">App Development</a></li>
             <li><a href="./branding.html">Brnading</a></li>
+            <li><a href="./aisol.html">AI Solutions</a></li>
+
           </ul>
         </li>
         <li>
@@ -636,6 +622,24 @@
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
     </div>
+    <script>
+      let valueDisplays = document.querySelectorAll(".num");
+      let interval = 5000;
+
+      valueDisplays.forEach((valueDisplay) => {
+        let startValue = 0;
+        let endValue = parseInt(valueDisplay.getAttribute("data-val"));
+        let duration = Math.floor(interval / endValue);
+
+        let counter = setInterval(function () {
+          startValue += 1;
+          valueDisplay.textContent = startValue;
+          if (startValue == endValue) {
+            clearInterval(counter);
+          }
+        }, duration);
+      });
+    </script>
     <script src="../js/Sidebarcollapse.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
