--- a/pages/project.html
+++ b/pages/project.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/softwaredev.css" />
+    <link rel="stylesheet" href="../css/projects.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -42,14 +42,18 @@
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title> SciPy | Branding </title>
+    <title>SciPy | Projects</title>
   </head>
   <body>
     <div class="sidebar-closer"></div>
     <div class="ping"></div>
 
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
     </div>
     <div class="content">
       <!-- header section  -->
@@ -64,15 +68,12 @@
               <div class="menu-list">
                 <ul style="margin: 0">
                   <li>
-                    <a id="home" href="../index.html"><span>Home</span></a>
+                    <a id="home" class="active-link" href="../index.html"
+                      ><span>Home</span></a
+                    >
                   </li>
                   <li class="dropdown">
-                    <a
-                      href="#"
-                      class="active-link home-color .main-a"
-                      style="color: #0092ff"
-                      >Services</a
-                    >
+                    <a href="#" class="main-a">Services</a>
                     <ul class="services-list">
                       <li>
                         <a href="./websitedev.html"
@@ -140,14 +141,27 @@
                       </li>
                     </ul>
                   </li>
-                  
-                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
-                  <li><a href="./project.html" class=".main-a">Projects</a></li>
+
+                  <li>
+                    <a
+                      href="./careers.html
+                    "
+                      >Careers</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="./project.html"
+                      class="active-link home-color .main-a"
+                      style="color: #0092ff"
+                      >Projects</a
+                    >
+                  </li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="./contact.html"
+                    <a id="Contact-us" class="" href="./contact.html"
                       >Contact Us</a
                     >
                   </li>
@@ -165,7 +179,14 @@
             </nav>
           </div>
         </header>
-        <div class="about-home" style="background: url('../assets/Service-images/Branding\ -\ 2.jpg'); background-position: bottom bottom;">
+        <div
+          class="about-home"
+          style="
+            background: url('../assets/Careers.jpg');
+            background-position: center center;
+            background-size: 100%;
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -191,141 +212,51 @@
           </div>
           <div class="auto-container">
             <div class="page-title">
-              <h1 class="title-abt">Branding</h1>
+              <h1 class="title-abt">Projects</h1>
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><p class="page-about">Branding</p></li>
+                <li><p class="page-about">Projects Page</p></li>
               </ul>
             </div>
           </div>
         </div>
       </section>
-      <section class="main-page">
+      <section class="projects-done">
+        <div class="gallery-title project-title">
+          <!-- <h3 class="sec-title-gallery">
+            <i class="fa-brands fa-studiovinari"></i>OUR PLACED
+          </h3> -->
+          <h2 class="gallery-title-head">Projects</h2>
+          <div class="sec-title-seperator">
+            <div class="blue-item"></div>
+          </div>
+        </div>
         <div class="auto-container">
-          <div class="content-row">
-            <div class="content-col">
-              <img
-                class="main-img"
-                src="../assets/Service-images/Branding - 1.jpg"
-                alt=""
-              />
-              <div class="lower-content">
-                <h3>Branding</h3>
-                <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interative web and mobile solution We are effective in
-                  next generation enterprise application on the web,Mobile and
-                  desktop to modernized business process and enhance customes
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the market
-                </p>
-                <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenge in
-                  business. We provide you
-                  secure,intractive,responive,elagant,sleek and fully customized
-                  UI/UX
-                </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
-                <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
-                </p>
-                <div class="lower-content-row">
-                  <div class="lower-content-col" style="width: 370px !important; height: 370px !important;">
-                    <img
-                      style="border-radius: 30px;"
-                      class="lower-content-img"
-                      src="../assets/Service-images/Branding - 1.jpg"
-                      alt=""
-                    />
-                  </div>
-                  <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
-                    <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
-                    </p>
-                    <ul class="service-list-content">
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="content-col">
-              <div class="widget-content">
-                <h6>Search Here</h6>
-                <div class="search-input">
-                  <input type="search" placeholder="Enter Your Keyword..." />
-                  <button><i class="fa-solid fa-magnifying-glass"></i></button>
-                </div>
-              </div>
-              <div class="widget-content">
-                <h6>Services List</h6>
-                <ul class="service-list-tab">
-                  <li><a href="./websitedev.html">Website Development</a></li>
-                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
-                  <li><a href="./erppage.html">ERP Solutions</a></li>
-                  <li><a href="./softwaredev.html">Software Development</a></li>
-                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li>
-                    <a href="./maintenance.html">Maintenance and Support</a>
-                  </li>
-                  <li><a href="./advisory.html">Advisory</a></li>
-                  <li><a href="./appdev.html">App Development</a></li>
-                  <li><a href="./branding.html">Branding</a></li>
-                  <li><a href="./aisol.html">AI Solutions</a></li>
-
-                </ul>
-              </div>
-              <div class="widget-content">
-                <h6>Social Icon</h6>
-                <ul class="social-icons-tab">
-                  <li>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                  </li>
-                </ul>
-              </div>
-              <div class="widget-content">
-                <h6>Brochure</h6>
-                <ul class="Brochure-tab">
-                  <li>
-                    <a href="#"
-                      ><i class="fa-regular fa-file"></i> Brochure.doc
-                      <span>80kb</span></a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fa-regular fa-file-pdf"></i> Brochure.pdf
-                      <span>80kb</span></a
-                    >
-                  </li>
-                </ul>
-              </div>
+          <div
+            class="d-flex justify-content-center align-items-center flex-column"
+          >
+            <div class="Projects-div">
+              <ul class="App-list pro-col">
+                <h2>Apps</h2>
+                <li>
+                  <a href="#">Plant Disease Detection (Plant-Care App)</a>
+                </li>
+                <li><a href="#">Malayalam Speech Generation App</a></li>
+                <li><a href="#">Image Enchance App</a></li>
+              </ul>
+              <ul class="Web-list pro-col">
+                <h2>Websites</h2>
+                <li>
+                  <a href="#">Medical Image Analysis & Feature Extraction</a>
+                </li>
+                <li><a href="#">Catrait Eye Segmentation</a></li>
+                <li><a href="#">Real Time View Counting (Advertising)</a></li>
+                <li>
+                  <a href="#">Skin ACNE Analysis & Real time Identification</a>
+                </li>
+                <li><a href="#">Stock Data Analysis</a></li>
+                <li><a href="#">Auto Scientific name from Image Search</a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -367,15 +298,12 @@
                   </li>
                   <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./maintenance.html"
-                      >Maintenance and Support</a
-                    >
+                    <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
                   <li><a href="./aisol.html">AI Solutions</a></li>
-
                 </ul>
               </div>
             </div>
@@ -446,14 +374,9 @@
       </div>
       <ul class="sidebar-menu">
         <!-- <li><img src="../assets/header-logo.png" alt="" /></li> -->
+        <li><a id="home-sidebar" href="../index.html">Home</a></li>
         <li>
-          <a id="home-sidebar" href="../index.html">Home</a>
-        </li>
-        <li>
-          <a
-            id="toggle-service"
-            href="#"
-            style="color: #fff; background-color: #0092ff"
+          <a id="toggle-service" href="#"
             >Services <i class="fa-solid fa-arrow-right serv-arrow"></i
           ></a>
           <ul id="menu" class="toogle-ul">
@@ -468,39 +391,28 @@
               >
             </li>
             <li>
-              <a href="./erppage.html" data-page="Service1"
-                >ERP Solutions</a
-              >
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
-            <li>
-              <a
-                href="./advisory.html"
-                >Advisory</a
-              >
-            </li>
-            <li>
-              <a
-                href="./appdev.html"
-                >App Development</a
-              >
-            </li>
-            <li>
-              <a
-                style="color: #fff; background-color: #0092ff"
-                href="./branding.html" 
-                >Branding</a
-              >
-            </li>
+            <li><a href="./advisory.html">Advisory</a></li>
+            <li><a href="./appdev.html">App Development</a></li>
+            <li><a href="./branding.html">Branding</a></li>
             <li><a href="./aisol.html">AI Solutions</a></li>
-
           </ul>
         </li>
-        <li><a href="./careers.html">Careers</a></li>
-        <li><a href="./project.html">Projects</a></li>
-       
+        <li>
+          <a href="./careers.html">Careers</a>
+        </li>
+        <li>
+          <a
+            href="./project.html"
+            style="color: #fff; background-color: #0092ff"
+            >PRojects</a
+          >
+        </li>
+
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
