--- a/pages/careers.html
+++ b/pages/careers.html
@@ -208,7 +208,7 @@
             <div class="wrapper">
               <div class="container">
                 <i class="fa-solid fa-dove"></i>
-                <span class="num" data-val="200">000</span>
+                <span id="nums" class="num" data-val="1000">000</span>
                 <span class="text">Projects Done</span>
               </div>
               <div class="container">
@@ -223,7 +223,7 @@
               </div>
               <div class="container">
                 <i class="fa-solid fa-star"></i>
-                <span class="num" data-val="100">000</span>
+                <span class="num" data-val="102">000</span>
                 <span class="text">Five Stars</span>
               </div>
             </div>
@@ -510,7 +510,6 @@
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
                   <li><a href="./aisol.html">AI Solutions</a></li>
-
                 </ul>
               </div>
             </div>
@@ -607,7 +606,6 @@
             <li><a href="./appdev.html">App Development</a></li>
             <li><a href="./branding.html">Brnading</a></li>
             <li><a href="./aisol.html">AI Solutions</a></li>
-
           </ul>
         </li>
         <li>
