added digital and branding content

--- a/pages/digitalmarket.html
+++ b/pages/digitalmarket.html
@@ -49,7 +49,11 @@
     <div class="ping"></div>
 
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
     </div>
     <div class="content">
       <!-- header section  -->
@@ -218,37 +222,53 @@
                 alt=""
               />
               <div class="lower-content">
-                <h3>Digital Marketing</h3>
+                <h3>Digital Marketing Service</h3>
                 <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interactive web and mobile solution We are effective in
-                  next generation enterprise application on the web, Mobile and
-                  desktop to modernized business process and enhance customers
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the
-                  market.
+                  Today's digital age, establishing a robust online presence and
+                  effectively reaching your target audience is essential for
+                  business success. At SciPy Technologies, we offer
+                  comprehensive Digital Marketing services that empower your
+                  brand to thrive in the digital realm. Our strategic approach,
+                  coupled with cutting-edge tools and creative expertise,
+                  ensures that your brand stands out, engages customers, and
+                  achieves remarkable results.
                 </p>
+                <h6
+                  style="text-decoration: underline; text-underline-offset: 6px"
+                >
+                  Our Digital Marketing Approach
+                </h6>
+                <h6>Search Engine Optimization (SEO)</h6>
                 <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenges in
-                  business. We provide you a
-                  secure,interactive,responsive,elegant,sleek and fully
-                  customized UI/UX. Identify the core needs of your business and
-                  develop an app that directly, immediately and throughly meets
-                  that need. We focus on cross platform development and
-                  customized design for IOS & Andriod. Enable smart and seamless
-                  system integration, We build open source content management
-                  system that are designed for customization and integration.
+                  Our digital marketing experts grow your business by building a
+                  strong online presence using data-driven SEO strategies and
+                  best practices to deliver quality traffic to your website.
                 </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
+                <h6 style="padding: 20px 0">Social Media Marketing</h6>
                 <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
+                  Using social media (SMO) channels like Facebook, Instagram,
+                  Twitter, Youtube, etc., we are prompting companies to engage
+                  with their audience to build their brand, increase sales and
+                  drive website traffic.
+                </p>
+                <h6 style="padding: 20px 0">Paid Promotion - PPC</h6>
+                <p>
+                  We help you define and target a specific audience, using
+                  powerful targeting with Paid Promotion through Google Adwords,
+                  Facebook, etc. to drive more qualified traffic to your website
+                  and application.
+                </p>
+                <h6 style="padding: 20px 0">Content Marketing</h6>
+                <p>
+                  Content is the backbone of online promotion. By creating fresh
+                  and relevant content, we help you stand out from the crowd and
+                  reach out to your potential audience.
+                </p>
+                <h6 style="padding: 20px 0">Reputation Management</h6>
+                <p>
+                  With our reputation management service, we enable you to
+                  influence and control the online reputation that keeps you in
+                  the good books of your audience.
                 </p>
                 <div class="lower-content-row">
                   <div class="lower-content-col">
@@ -260,19 +280,16 @@
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
-                    <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
+                    <p
+                      style="
+                        display: flex;
+                        flex-direction: column;
+                        margin-top: 30px;
+                      "
+                    >
+                      <a target="_blank">www.techstalwarts.com</a>
+                      <a target="_blank">www.sudouae.com</a>
                     </p>
-                    <ul class="service-list-content">
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                    </ul>
                   </div>
                 </div>
               </div>
@@ -379,9 +396,7 @@
                   </li>
                   <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./maintenance.html"
-                      >Maintenance and Support</a
-                    >
+                    <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
