--- a/pages/branding.html
+++ b/pages/branding.html
@@ -42,14 +42,18 @@
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title> SciPy | Branding </title>
+    <title>SciPy | Branding</title>
   </head>
   <body>
     <div class="sidebar-closer"></div>
     <div class="ping"></div>
 
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
     </div>
     <div class="content">
       <!-- header section  -->
@@ -140,7 +144,7 @@
                       </li>
                     </ul>
                   </li>
-                  
+
                   <li><a href="./careers.html" class=".main-a">Careers</a></li>
                   <li><a href="./project.html" class=".main-a">Projects</a></li>
                   <li>
@@ -165,7 +169,13 @@
             </nav>
           </div>
         </header>
-        <div class="about-home" style="background: url('../assets/Service-images/Branding\ -\ 2.jpg'); background-position: bottom bottom;">
+        <div
+          class="about-home"
+          style="
+            background: url('../assets/Service-images/Branding\ -\ 2.jpg');
+            background-position: bottom bottom;
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -212,53 +222,32 @@
               <div class="lower-content">
                 <h3>Branding</h3>
                 <p>
-                  We provide expert and unique Software Development Service for
-                  the needs that are specifically fro industrial trens and
-                  upcomming market. Enchance Business growth and conques market
-                  with interative web and mobile solution We are effective in
-                  next generation enterprise application on the web,Mobile and
-                  desktop to modernized business process and enhance customes
-                  experience. Extensive Product Development Services across
-                  software development life cycle. We provide persistent product
-                  development service to help you stay competitive in the market
+                  Branding agency focus on assisting to create, develop, and
+                  re-launching brands. They're the brain behind most brand's
+                  strategies, guiding your business in the right way. Branding
+                  could be acknowledged as a series of fundamental activities
+                  that define your brand mission, vision, values, promises.
                 </p>
-                <p>
-                  Customize the trend that are widely in our networks, design
-                  custom web application that meets all the challenge in
-                  business. We provide you
-                  secure,intractive,responive,elagant,sleek and fully customized
-                  UI/UX
-                </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
-                <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
-                </p>
+                <h6 style="padding: 30px 0">Create</h6>
+                <h6 style="padding: 30px 0">Plan</h6>
+                <h6 style="padding: 30px 0">Measure</h6>
+                <h6 style="padding: 30px 0">
+                  Manage branding strategies for clients
+                </h6>
+                <h6 style="padding: 30px 0">
+                  Including support in advertising other forms of promotion
+                </h6>
                 <div class="lower-content-row">
-                  <div class="lower-content-col" style="width: 370px !important; height: 370px !important;">
+                  <div
+                    class="lower-content-col"
+                    style="width: 370px !important; height: 370px !important"
+                  >
                     <img
-                      style="border-radius: 30px;"
+                      style="border-radius: 30px"
                       class="lower-content-img"
                       src="../assets/Service-images/Branding - 1.jpg"
                       alt=""
                     />
-                  </div>
-                  <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
-                    <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
-                    </p>
-                    <ul class="service-list-content">
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                    </ul>
                   </div>
                 </div>
               </div>
@@ -286,7 +275,6 @@
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
                   <li><a href="./aisol.html">AI Solutions</a></li>
-
                 </ul>
               </div>
               <div class="widget-content">
@@ -367,15 +355,12 @@
                   </li>
                   <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./maintenance.html"
-                      >Maintenance and Support</a
-                    >
+                    <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
                   <li><a href="./branding.html">Branding</a></li>
                   <li><a href="./aisol.html">AI Solutions</a></li>
-
                 </ul>
               </div>
             </div>
@@ -468,39 +453,30 @@
               >
             </li>
             <li>
-              <a href="./erppage.html" data-page="Service1"
-                >ERP Solutions</a
-              >
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
             <li>
-              <a
-                href="./advisory.html"
-                >Advisory</a
-              >
+              <a href="./advisory.html">Advisory</a>
             </li>
             <li>
-              <a
-                href="./appdev.html"
-                >App Development</a
-              >
+              <a href="./appdev.html">App Development</a>
             </li>
             <li>
               <a
                 style="color: #fff; background-color: #0092ff"
-                href="./branding.html" 
+                href="./branding.html"
                 >Branding</a
               >
             </li>
             <li><a href="./aisol.html">AI Solutions</a></li>
-
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
         <li><a href="./project.html">Projects</a></li>
-       
+
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
