added some more fixes

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -443,7 +443,7 @@
                 <div class="team-image-div">
                   <img
                     class="team-img"
-                    src="../assets/teams/women.jpg"
+                    src="../assets/teams/men.jpg"
                     alt=""
                   />
                   <div
