--- a/pages/careers.html
+++ b/pages/careers.html
@@ -242,7 +242,7 @@
             </div>
           </div>
           <div class="team-members-gallery">
-            <div class="team-row">
+            <div class="team-row career-candidates">
               <div class="team-col">
                 <div class="team-image-div">
                   <img
