--- a/pages/project.html
+++ b/pages/project.html
@@ -226,7 +226,7 @@
           <!-- <h3 class="sec-title-gallery">
             <i class="fa-brands fa-studiovinari"></i>OUR PLACED
           </h3> -->
-          <h2 class="gallery-title-head">Projects</h2>
+          <h2 class="gallery-title-head">Projects Done</h2>
           <div class="sec-title-seperator">
             <div class="blue-item"></div>
           </div>
@@ -236,27 +236,46 @@
             class="d-flex justify-content-center align-items-center flex-column"
           >
             <div class="Projects-div">
-              <ul class="App-list pro-col">
-                <h2>Apps</h2>
+              <ol class="pro-col">
+                <li>
+                  <a target="_blank">Real Time View Counting (Advertising)</a>
+                </li>
+                <li>
+                  <a target="_blank">LLM Based Speech and Text Transformater</a>
+                </li>
+                <li>
+                  <a target="_blank">FarmEasy - AI (App for every Farmer)</a>
+                </li>
+                <li>
+                  <a target="_blank">Stock Data Analytics and Forecasting</a>
+                </li>
+                <li><a target="_blank">Auto Catract Surgery Bot</a></li>
+                <li>
+                  <a target="_blank">Derma-net for Skin lesion Segmentation</a>
+                </li>
+                <li>
+                  <a target="_blank"
+                    >Web Scapping and Automation Email Verifier</a
+                  >
+                </li>
+                <li><a target="_blank">AI-Fire Bot</a></li>
                 <li>
                   <a href="#">Plant Disease Detection (Plant-Care App)</a>
                 </li>
                 <li><a href="#">Malayalam Speech Generation App</a></li>
                 <li><a href="#">Image Enchance App</a></li>
-              </ul>
-              <ul class="Web-list pro-col">
-                <h2>Websites</h2>
+
+
                 <li>
                   <a href="#">Medical Image Analysis & Feature Extraction</a>
                 </li>
                 <li><a href="#">Catrait Eye Segmentation</a></li>
-                <li><a href="#">Real Time View Counting (Advertising)</a></li>
                 <li>
                   <a href="#">Skin ACNE Analysis & Real time Identification</a>
                 </li>
                 <li><a href="#">Stock Data Analysis</a></li>
                 <li><a href="#">Auto Scientific name from Image Search</a></li>
-              </ul>
+              </ol>
             </div>
           </div>
         </div>
