--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -49,7 +49,11 @@
     <div class="ping"></div>
 
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
     </div>
     <div class="content">
       <!-- header section  -->
@@ -207,7 +211,7 @@
               "
             >
               <h1 class="title-abt">Maintenance and Support</h1>
-              <ul>
+              <ul class="about-home-title">
                 <li><a href="../index.html">Home</a></li>
                 <li>
                   <p
@@ -335,7 +339,7 @@
                 <ul class="Brochure-tab">
                   <li>
                     <a href="#"
-                      ><i class="fa-regular fa-file"></i> Brochure.doc
+                      ><i class="fa-regular fa-file"></i>Brochure.doc
                       <span>80kb</span></a
                     >
                   </li>
@@ -388,9 +392,7 @@
                   </li>
                   <li><a href="./advisory.html">Advanced Tech</a></li>
                   <li>
-                    <a href="./maintenance.html"
-                      >Maintenance and Support</a
-                    >
+                    <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                   <li><a href="./appdev.html">App Development</a></li>
